ERC20 get balanceof rest api call enabled ERC20 get allowance rest api call enabled ERC20 get decimals rest api call enabled
