# resources/swagger/swagger-template.json
@@ -1566,6 +1566,199 @@
         }
       }
     },
+    "/{network}/erc20/{contract}/decimals": {
+      "get": {
+        "tags": ["erc20"],
+        "summary": "Read decimal value of ERC 20 smart contract",
+        "description": "Read decimal value of ERC 20 smart contract providing contract address and target network specification",
+        "operationId": "erc20-decimals",
+        "consumes": ["application/json"],
+        "produces": ["application/json"],
+        "deprecated": false,
+        "security": [{
+          "connectionProfileToken": []
+        }],
+        "parameters": [{
+          "in": "path",
+          "name": "network",
+          "description": "target web3 protocol compatible network",
+          "type": "string",
+          "enum": ["ropsten", "rinkeby", "kovan", "mainnet", "infura", "quiknode", "private"],
+          "example": "ropsten",
+          "default": "ropsten",
+          "required": true
+        },
+          {
+            "in": "path",
+            "name": "contract",
+            "description": "address of the contract to be queried. Example address of GLOcoin is shown for Ropsten network",
+            "type": "string",
+            "example": "0x63dc97b81319e17ad5f9c6cff7e0442abe48bc92",
+            "default": "0x63dc97b81319e17ad5f9c6cff7e0442abe48bc92",
+            "required": true
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Ethereum network peer information response",
+            "schema": {
+              "example": {}
+            }
+          },
+          "400": {
+            "$ref": "#responses/ProfileInvalidError"
+          },
+          "422": {
+            "example": {
+              "code": 422,
+              "msg": "Unprocessable entity",
+              "details": "The method decimals does not exist/is not available. Error code: -32601"
+            }
+          }
+        }
+      }
+    },
+    "/{network}/erc20/{contract}/balanceof/{address}": {
+      "get": {
+        "tags": ["erc20"],
+        "summary": "Read the balance of given address for selected ERC 20 smart contract",
+        "description": "Read the balance of given address of ERC 20 smart contract providing contract address and target network specification",
+        "operationId": "erc20-balance",
+        "consumes": ["application/json"],
+        "produces": ["application/json"],
+        "deprecated": false,
+        "security": [{
+          "connectionProfileToken": []
+        }],
+        "parameters": [{
+          "in": "path",
+          "name": "network",
+          "description": "target web3 protocol compatible network",
+          "type": "string",
+          "enum": ["ropsten", "rinkeby", "kovan", "mainnet", "infura", "quiknode", "private"],
+          "example": "ropsten",
+          "default": "ropsten",
+          "required": true
+        },
+          {
+            "in": "path",
+            "name": "contract",
+            "description": "address of the contract to be queried. Example address of GLOcoin is shown for Ropsten network",
+            "type": "string",
+            "example": "0x63dc97b81319e17ad5f9c6cff7e0442abe48bc92",
+            "default": "0x63dc97b81319e17ad5f9c6cff7e0442abe48bc92",
+            "required": true
+          },
+          {
+            "in": "path",
+            "name": "address",
+            "description": "address of the account to be readed",
+            "type": "string",
+            "example": "0xc7b1ba32e7842d88b9cac26fee63a2853df1a625",
+            "default": "0xc7b1ba32e7842d88b9cac26fee63a2853df1a625",
+            "required": true
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Ethereum network ERC20 contract balanceof response",
+            "schema": {
+              "example": {
+                "id": 0,
+                "code": 200,
+                "msg": "balanceof",
+                "result": "0x00000000000000000000000000000000000000000000000000000000000186a0"
+              }
+            }
+          },
+          "400": {
+            "$ref": "#responses/ProfileInvalidError"
+          },
+          "422": {
+            "example": {
+              "code": 422,
+              "msg": "Unprocessable entity",
+              "details": "The method balanceof does not exist/is not available. Error code: -32601"
+            }
+          }
+        }
+      }
+    },
+    "/{network}/erc20/{contract}/allowance/{owner}/to/{spender}": {
+      "get": {
+        "tags": ["erc20"],
+        "summary": "Read the allowance of given address for selected ERC 20 smart contract",
+        "description": "Read the allowance of given address of ERC 20 smart contract providing contract address and target network specification",
+        "operationId": "erc20-balance",
+        "consumes": ["application/json"],
+        "produces": ["application/json"],
+        "deprecated": false,
+        "security": [{
+          "connectionProfileToken": []
+        }],
+        "parameters": [{
+          "in": "path",
+          "name": "network",
+          "description": "target web3 protocol compatible network",
+          "type": "string",
+          "enum": ["ropsten", "rinkeby", "kovan", "mainnet", "infura", "quiknode", "private"],
+          "example": "ropsten",
+          "default": "ropsten",
+          "required": true
+        },
+          {
+            "in": "path",
+            "name": "contract",
+            "description": "address of the contract to be queried. Example address of GLOcoin is shown for Ropsten network",
+            "type": "string",
+            "example": "0x63dc97b81319e17ad5f9c6cff7e0442abe48bc92",
+            "default": "0x63dc97b81319e17ad5f9c6cff7e0442abe48bc92",
+            "required": true
+          },
+          {
+            "in": "path",
+            "name": "owner",
+            "description": "owner address of the account to be checked",
+            "type": "string",
+            "example": "0x32C9cbb237538515B20EB5e2ef74836A4334C6Ab",
+            "default": "0x32C9cbb237538515B20EB5e2ef74836A4334C6Ab",
+            "required": true
+          },
+          {
+            "in": "path",
+            "name": "spender",
+            "description": "spender address allowed to to operations with the funds",
+            "type": "string",
+            "example": "0xc7b1ba32e7842d88b9cac26fee63a2853df1a625",
+            "default": "0xc7b1ba32e7842d88b9cac26fee63a2853df1a625",
+            "required": true
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Ethereum network peer ERC20 contract allowance response",
+            "schema": {
+              "example": {
+                "id": 0,
+                "code": 200,
+                "msg": "allowance",
+                "result": "0x0000000000000000000000000000000000000000000000000000000000000000"
+              }
+            }
+          },
+          "400": {
+            "$ref": "#responses/ProfileInvalidError"
+          },
+          "422": {
+            "example": {
+              "code": 422,
+              "msg": "Unprocessable entity",
+              "details": "The method allowance does not exist/is not available. Error code: -32601"
+            }
+          }
+        }
+      }
+    },
     "/private/devops/deploy": {
       "post": {
         "tags": ["devops", "private"],
